@@ -1,7 +1,8 @@
 CC=gcc
 CFLAGS= -g
 LDFLAGS=
-PROGS=wc cat cp sync yes update sleep whoami true false ls echo init
+PROGS=wc cat cp sync yes update sleep whoami true false ls echo init rm rmdir\
+			mv
 
 VERSION=v0.1.0
 
